test/data/semantic/bad/match_arm_arity_mismatch.coy
enum E {
    A(),
    B(i64)
}

fn f(x: E) -> i64 {
    match x {
        E::A() => 0,
        E::B() => 1
    }
}

fn main() -> () {
    ()
}
